--- a/style.css
+++ b/style.css
@@ -165,4 +165,101 @@ ul li a:hover{
    position: absolute;
    top: -20px;
    left: 870px;
+   border-radius: 10px;
+   padding: 25px;
+}
+.form h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 22px;
+    background-color:#fff;
+    border-radius: 10px;
+    padding: 8px;
+    margin: 2px;
+}
+
+.form input{
+    width: 240px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid #ff7200;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    color: #fff;
+    font-size: 15px;
+    font-family: sans-serif;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    
+}
+
+.form input:focus{
+    outline: none;
+}
+
+::placeholder{
+    color: #fff;
+    font-family: arial;
+}
+.btnn{
+    width: 240px;
+    height: 40px;
+    background: #ff7200;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 10px;
+    font-family: sans-serif;
+    margin-top: 18px;
+    cursor: pointer;
+    transition: .4s ease;
+}
+
+.btnn:hover{
+    background: #fff;
+    color:#ff7200;
+}
+
+.btnn a{
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+
+.form .link{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.form .link a{
+    text-decoration: none;
+    color: #ff7200;
+}
+
+.liw{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.icons a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.icons ion-icon{
+    font-size: 30px;
+    padding-left: 14px;
+    padding-top: 5px;
+    color: #fff;
+    transition: .3s ease;
+}
+
+.icons ion-icon:hover{
+    color: #ff7200;
 }
